Fixed Navbar issue with css naming and spacing between mobile filters change

--- a/src/components/MobileComponents/FitlerPage/components/DropDownFilter.css
+++ b/src/components/MobileComponents/FitlerPage/components/DropDownFilter.css
@@ -3,7 +3,8 @@
     font-weight: bold;
 }
 
-.dropDownContainer {
+.dropDownContainerK {
+    padding-top: 15px;
     margin-top: 0px;
 }
 
